<resources>
    <string name="app_name">GeometrySolver</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dukien_yecau">Dữ kiện và Yêu cầu:</string>
    <string name="ket_qua">Kết quả:</string>
    <string name="chi_tiet">Lời giải chi tiết:</string>
    <string name="result">Result:</string>
    <string name="solve">Solve</string>
    <string name="add">Add</string>
    <string name="value_of_parameter">Value of parameter</string>
    <string name="list_of_added_parameters">List of added parameters</string>
    <string name="your_title">Your title</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="empty_value">Title cannot be empty!</string>
    <string name="timeline">Timeline</string>
    <string name="empty_history_list">You haven\'t solved any problem</string>
    <string name="default_tvParameters">List of added parameters</string>
    <string name="default_etResult">Result:</string>
    <string name="date_time">Date time:</string>
    <string name="title">Title</string>
    <string name="ket_qua_2">ket qua</string>
    <string name="chi_tiet_2">chi tiet</string>
    <string name="coming_soon">Coming soon</string>
</resources>
