<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".history_detail"
    android:background="@drawable/gradient_2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="10"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgMath"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="5"
                android:src="@drawable/example" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="5"
                android:layout_marginTop="10dp">
                <TextView
                    android:id="@+id/textViewTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Titlle"
                    android:textSize="20sp"
                    android:textColor="@color/colorAccent"/>
                <TextView
                    android:id="@+id/textViewTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textColor="@color/colorPrimary"
                    android:text="Date time:"
                    android:textStyle="italic"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="left"/>
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dukien_yecau"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/yeuCau"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="18sp"
            />
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ket_qua"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/ketQua"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="18sp"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chi_tiet"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/chiTiet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="18sp"/>
    </LinearLayout>

</FrameLayout>